# MiniML

./: .gitignore  .ocamlformat  ReadMe.md  dune  dune-project  interpreter.ml  mml.ml  mmlcat.ml  mmli.ml  mmllexer.mll  mmlparser.mly  mmlpp.ml  typechecker.ml
tests/: array.mml  fact.mml  fact2.mml  fun.mml  polymorphism.mml  recursive_struct.mml  strct.mml  syracuse.mml  variable_types.mml
